--- a/hugo.toml
+++ b/hugo.toml
@@ -58,3 +58,12 @@ summaryLength = 0
       name = 'fragmentrefs'
       type = 'fragments'
       weight = 10
+
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
+
+[markup.goldmark.parser.attribute]
+  block = true
+  title = true
