--- a/hugo.toml
+++ b/hugo.toml
@@ -3,7 +3,7 @@
 # https://blowfish.page/docs/getting-started/
 
 theme = "blowfish"
-baseURL = "https://atlas-group.cs.brown.edu"
+baseURL = "https://atlas.cs.brown.edu"
 
 defaultContentLanguage = "en"
 # pluralizeListTitles = "true" # hugo function useful for non-english languages, find out more in  https://gohugo.io/getting-started/configuration/#pluralizelisttitles
