--- a/data/team.yaml
+++ b/data/team.yaml
@@ -220,7 +220,7 @@ people:
 alumni:
   - name: Di Jin
     url: https://sleepymug.me
-    note: "Postdoc, 2024-2025, next: Huawei Research"
+    note: "(Postdoc, 2024-2025, next: Huawei Research)"
   - name: Ramiz Dundar
     url: https://ramiz.dev/
     note: "(M.Sc., 2025, next: Google)"
