Make urls relative
Signed-off-by: Evangelos Lamprou <vagos@lamprou.xyz>

--- a/hugo.toml
+++ b/hugo.toml
@@ -4,6 +4,8 @@
 
 theme = "blowfish"
 baseURL = "https://atlas.cs.brown.edu"
+relativeURLs = true
+canonifyURLs = false
 
 defaultContentLanguage = "en"
 # pluralizeListTitles = "true" # hugo function useful for non-english languages, find out more in  https://gohugo.io/getting-started/configuration/#pluralizelisttitles
