--- a/data/news.yaml
+++ b/data/news.yaml
@@ -6,7 +6,7 @@ items:
   - |
       Jul'25: Our [benchmark suite for the shell](https://nikos.vasilak.is/p/koala:atc:2025.pdf) received the [Best Paper Award](https://www.usenix.org/conferences/best-papers) at [USENIX ATC'25](https://www.usenix.org/conference/atc25)! \
   - |
-      Jul'25: Our group received a [Google ML-and-Systems Junior Faculty](https://blog.google/products/google-cloud/ml-systems-junior-faculty-awards/) Award on [Securing Open-Source Software](https://atlas.cs.brown.edu/supply-chain/)!  
+      Jul'25: Our group received a [Google ML-and-Systems Junior Faculty](https://blog.google/products/google-cloud/ml-systems-junior-faculty-awards/) Award on [Securing Open-Source Software](/supply-chain/)!  
   - |
       Jul'25: [Evangelos Lamprou](https://vagos.lamprou.xyz/) joins the group for his PhD!  
   - |
