--- a/data/team.yaml
+++ b/data/team.yaml
@@ -210,6 +210,7 @@ people:
     home: true
     home_role: M.Sc. Student
     photo: zekai.jpg
+    website: https://spanning-tree.github.io/
     blurb: Exploring formal methods and how AI enhances them.
     links:
       - label: E-mail
