--- a/data/team.yaml
+++ b/data/team.yaml
@@ -231,6 +231,9 @@ alumni:
   - name: Anirudh Narsipur
     url: https://anarsipur.com
     note: "(M.Sc., 2025, next: Evolver)"
+  - name: Julian Dai
+    url: https://jdai1.github.io/
+    note: "(B.Sc., 2023-2025, next: Ramp)"
   - name: Ioanna Gemou
     url: https://igemou.github.io/
     note: "(Visiting Student, 2025, next: Brown University)"
